Resolves: tdf#91672 Crash in base report - right click in page header section

Change-Id: Ie7f9abc16e07c9ef44916e0cebe67486f3583449