reportdesign/source/ui/report/ViewsWindow.cxx
@@ -317,6 +317,7 @@ void OViewsWindow::removeSection(sal_uInt16 _nPosition)
 
         m_pParent->getReportView()->UpdatePropertyBrowserDelayed((*aNew)->getReportSection().getSectionView());
 
+        aPos->disposeAndClear();;
         m_aSections.erase(aPos);
         Resize();
     }
